--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: Open Sans, sans-serif;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  background: #f4f6f9;
+}
