Show data on chart
- Use `ng2-charts` to bind data to Chart.js.
- Add `ChartDataService` to grant the chart component access to data from the API.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </select>
     </div>
     <div class="chart">
-      <p>Chart</p>
+      <app-chart></app-chart>
     </div>
   </div>
 </div>
