--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,11 @@
         width: 100%;
         padding: .5em;
       }
+
+      .error {
+        color: red;
+        font-size: small;
+      }
     }
 
     .chart {
