--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,4 +1,5 @@
 <div>
+  <div *ngIf="loading" class="loader"><p>loading...</p></div>
   <canvas *ngIf="chartData.data.length > 0" baseChart width="400" height="550"
           [datasets]="chartData.data"
           [labels]="chartData.labels"
