--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <input type="date" [(ngModel)]="endDate" [min]="minDate" [max]="maxDate" (change)="changeDate()"/>
     </div>
     <div class="chart">
-      <app-chart></app-chart>
+      <app-chart [loading]="loading"></app-chart>
     </div>
   </div>
 </div>
