--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,11 +31,16 @@
         color: red;
         font-size: small;
       }
+
+      input[type="date" i] {
+        width: 98%;
+      }
     }
 
     .chart {
       flex: 80%;
       margin-left: 0;
+      position: relative;
     }
   }
 }
